# AI-Bazaar

./: .agents.md  .claude.md  .gitignore  ABLATION_PLAN.md  AI_bazaar_thesis_notes_cameron_crow.docx  DEPLOYMENT_SUMMARY.md  EXPERIMENT_PROGRESS.md  EXPERIMENT_STATUS.md  FIXES_APPLIED.md  LICENSE  LOGGING_SETUP.md  Modelfile  OPEN_WEIGHTS_MODELS.md  PLAN.md  PROGRESS.md  README.md  STATUS_REPORT.md  analyze_results.py  cluster_launcher.sh  debug_gpu.py  debug_tokenizer.py  debug_tokens.py  della_crash.sh  della_lemon.sh  download_models.py  find_models.py  full_validation.py  gemini_list.py  google_studio_test.py  launch_ablations.sh  local_launcher.sh  merge_lora.py  monitor_jobs.py  pyproject.toml  requirements.txt  restart_all_experiments.py  resubmit_failed.py  resubmit_nodiaries.py  run_figures.py  setup.py  (+16 more)
agents/: AGENT_CITATION_CHECK.md  AGENT_CLAIM_EVIDENCE_MAP.md  AGENT_CLAIM_VERIFY.md  AGENT_EXPERIMENT_GAP.md  AGENT_FIGURE_PLANNER.md  AGENT_IMPROVER.md  AGENT_INTERVIEWER.md  AGENT_LLM_DETECTOR.md  AGENT_LOOP.md  AGENT_METAREVIEWER.md  AGENT_RELATED_WORK.md  AGENT_SECTION_WRITER.md  AGENT_SPELLCHECK.md  AGENT_VISUAL.md  REVIEWER_POOL.md  STYLE_GUIDE.md  WRITING_ASSISTANT.md  citation_verification_agent.md  figure_analysis_agent.md
ai_bazaar/: __init__.py  main.py
documentation/: BAZAAR_ENV_SYNC_REPORT.md  COMMANDS_NOTEPAD.md  CONSUMER_CONSUMPTION_PHASE.md  CONSUMER_UTILITY_REPORT.md  CRASH_PROMPT_LOGGING_TEMPLATE.md  EAS_vs_MODEL_SIZE.md  EXP3_IMPLEMENTATION_PLAN.md  FIRM_REENTRY_INSTANCES.md  FIRM_STATE_FIELDS.md  LEMON_MARKET_ENV(old).md  PROFIT_REPORT.md  (+11 more)
(+99085 files in other folders)
