[project]
name = "ai-bazaar"
version = "1.0.0"
description = "A framework for economic simulations using Large Language Models"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy",
    "wandb",
    "openai",
    "requests",
    "torch>=2.4.0",
    "transformers",
    "trl",
    "peft",
    "streamlit",
    "altair",
    "pandas",
    "scipy",
    "pillow",
    "vllm>=0.6.0",
    "unsloth @ git+https://github.com/unslothai/unsloth.git",
    "pyarrow<17.0.0",
    "bitsandbytes",
    "unsloth-zoo",
    "datasets",
    "matplotlib>=3.10.8",
    "google-genai>=1.63.0",
]

[tool.uv]
managed = true
dev-dependencies = [
    "pytest>=6.0.0",
    "pytest-cov>=2.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
    "isort>=5.0.0",
]
